# langfuse-examples

./: .gitignore  AGENTS.md  README.en.md  README.md
mcp-with-tracing/: .env.example  .gitignore  AGENTS.md  MIGRATION_REPORT.md  Makefile  QUICKSTART.md  README.md  STARTUP_GUIDE.md  pyproject.toml  pytest.ini  requirements.txt  run.py  rxconfig.py
mcp-with-tracing/.lingma/rules/: Reflex开发规范.md  开发实战指南.md  开发规范.md
mcp-with-tracing/config/: README.md  alerts.yaml  alerts.yaml.example
mcp-with-tracing/devs/: COMPLETION_SUMMARY.md  CURRENT_STATUS.md  DETAILED_TASK_BREAKDOWN.md  DEVELOPMENT_PLAN.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENT_INDEX.md  EXECUTIVE_SUMMARY.md  PERFORMANCE_TESTING_REPORT.md  PHASE6_INTEGRATION_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  REQUIREMENT_ALIGNMENT_AND_TASKS.md  STREAMLIT_UI_DEVELOPMENT_SUMMARY.md  TEST_FIX_REPORT.md  TEST_IMPROVEMENT_PLAN.md  TEST_SEPARATION_SUMMARY.md  WORK_SUMMARY.md  alert_config_validation_summary.md  alert_implementation_analysis.md  alert_monitor_implementation_summary.md
mcp-with-tracing/devs/phase1/: phase1_completion_report.md  phase1_plan.md  phase1_progress.md
mcp-with-tracing/devs/phase2/: phase2_completion_report.md  phase2_plan.md  phase2_progress.md
mcp-with-tracing/devs/phase3/: FINAL_COMPLETION_REPORT.md  INTEGRATION_TEST_MARKERS_GUIDE.md  MARKERS_COMPLETION_REPORT.md  PHASE3_PROGRESS.md  phase3_completion_report.md  phase3_plan.md
mcp-with-tracing/devs/phase4/: phase4_completion_report.md  phase4_plan.md
mcp-with-tracing/devs/phase5/: README_NOTIFICATION_SETUP.md  phase5_plan.md  (+2 more)
mcp-with-tracing/docs/: FEATURE_LIST.md  TESTING_QUICK_REFERENCE.md  TESTING_SUMMARY.md  WECOM_CHECKLIST.md  WECOM_CONFIG_COMPLETE.md  WECOM_QUICK_START.md  WECOM_SETUP_README.md  alert-config-guide.md  alert-monitoring-guide.md  alert-systems-comparison.md  backend-standards.md  best-practices.md  code-review-guide.md  concurrent-testing-guide.md  event-response-runbook.md  frontend-standards.md  integration-patterns.md  mcp-http-setup.md  metrics-reference.md  monitoring-guide.md  notification-channels-setup.md  phase6-quick-start.md  prompt-effectiveness-dashboard.md  satisfaction-dashboard-guide.md  security-guide.md  session-view-guide.md  smart-alerting-guide.md  testing-guide.md  testing-organization.md  wecom-alert-setup.md
mcp-with-tracing/examples/: notification_channels_example.py
mcp-with-tracing/manuals/: API 参考.md  README.md  快速入门.md  用户手册.md
mcp-with-tracing/monitoring/: README.md  grafana-dashboard.json  prometheus-alerts.yml
mcp-with-tracing/reflex_ui/: __init__.py  app.py
mcp-with-tracing/scripts/: add_test_markers.py  query_feedback.py  query_prompt_versions.py  setup_wecom_alerts.py  test_alert_config.py  test_alerting.py  test_feedback_integration.py  test_langfuse_connection.py  test_notification_channels.py  test_prompt_versioning.py  test_session_tracing.py  test_smart_alerting.py  test_success_failure_tracking.py  validate_alert_config.py  verify_phase6_integration.py
mcp-with-tracing/src/: server.py
mcp-with-tracing/tests/: conftest.py  test_feedback.py  test_feedback_tools_integration.py  test_instrumentation.py  test_session.py
mcp-with-tracing/ui/: README.md  REFLEX_QUICKSTART.md  app.py
skill-observability-toolkit/: "file"  .env.example  CONTRIBUTING.md  FINAL_PHASE_1_SUMMARY.md  LICENSE  Makefile  PHASE_1_1_FINAL_REPORT.md  PHASE_1_1_PROGRESS_REPORT.md  PHASE_1_2_COMPLETION_REPORT.md  PHASE_1_COMPLETE_SUMMARY.md  PHASE_1_FINAL_SUMMARY.md  PHASE_1_REMAINING_2PCT.md  PHASE_2_COMPLETE_SUMMARY.md  PHASE_2_EXECUTION_PLAN.md  PHASE_2_FINAL_COMPLETION.md  README.md  config_audit.md  findings.md  progress.md  pyproject.toml  requirements-dev.txt  requirements.txt  task_plan.md
skill-observability-toolkit/docs/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN.md  ENHANCED_CAPABILITIES_PLAN.md  LESSONS_LEARNED.md  OPTIMIZATION_ANALYSIS.md  PHASE1_PARALLEL_IMPLEMENTATION_COMPLETE.md  PHASE1_TASK1.1_COMPLETE.md  PHASE1_TASK1.2_COMPLETE.md  PHASE1_TASK1.4-1.5_COMPLETE.md  PHASE1_TASK1.4_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_COMPLETE.md  PHASE5_COMPLETE.md  PROMETHEUS_INTEGRATION.md  QUICK_START.md  TROUBLESHOOTING.md  USER_GUIDE.md
skill-observability-toolkit/tests/: conftest.py
smart-customer-service/: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  diagnosis_report_DOPS-84071.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  verify_setup.py
smart-customer-service/analysis/: __init__.py  failure_analyzer.py
smart-customer-service/backend/: Dockerfile  conftest.py  main.py  pytest.ini
smart-customer-service/core/: __init__.py  langfuse_client.py  tracing.py
smart-customer-service/docs/: ESC-03集成指南.md  开发任务拆分.md  技术架构文档.md  需求开发文档.md
smart-customer-service/examples/: __init__.py  basic_tracing.py  dashboard_example.py  failure_analysis_demo.py  tech_support_demo.py
smart-customer-service/frontend/: .env.example  index.html
smart-customer-service/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml
smart-customer-service/modules/: __init__.py  dialogue_manager.py  rag_knowledge.py  tool_calling.py
smart-customer-service/monitoring/: alerts.yml  grafana.yaml  prometheus.yml
smart-customer-service/plan/: CODE_REVIEW_P0_BACKEND.md  DEVELOPMENT_PROGRESS_REPORT.md  ESC-03开发完成报告.md  FINAL_SUMMARY.md  FINAL_TEST_REPORT.md  OPTIMIZATION_SUMMARY.md  P0_REDIS_FALLBACK_COMPLETE.md  P0_TASKS_COMPLETE.md  PENDING_TASKS_LIST.md  PHASE3_FINAL_SUMMARY.md  PHASE3_SUMMARY.md  Phase2开发计划.md  RAG-04开发完成报告.md  RAG任务计划.md  RAG开发进度.md  RAG研究发现.md  REDIS_INTEGRATION_OPTIMIZATION.md  TEST_COMPLETE_SUMMARY.md  TEST_SUMMARY.md  WEEK2_TASK_COMPLETE.md  WEEK3_TASK_COMPLETE.md  int-01-api-gateway-design.md  phase2-completion-summary.md  phase2-final-summary.md  phase2-progress-report.md  phase3-plan.md  test-plan.md  并发开发完成报告.md  迭代开发计划.md
smart-customer-service/tests/: test_data_masking.py  test_scoring.py  test_tracing.py
smart-customer-service/utils/: data_masking.py
(+297 files in other folders)
